Menambahkan field date_joined pada api profile dan memperbaiki get_profile_photo_url pada comment dan menambahkan fungsi untuk menampilkan detail post dari link share post

--- a/cardview/templates/card_view.html
+++ b/cardview/templates/card_view.html
@@ -400,7 +400,7 @@
 
   if (shareBtn) {
     shareBtn.addEventListener('click', function() {
-      const url = window.location.origin + `?post=${postId}`;
+      const url = `${window.location.origin}/post/${postId}/`;
       if (navigator.share) {
         navigator.share({ title: 'Smash! Post', url });
       } else if (navigator.clipboard) {
